# server/api/types.go
@@ -3,33 +3,39 @@
 package api
 
 type V1UsersResponseUsers struct {
-  Id string `json:"id"`
-  Email string `json:"email"`
-  CreatedAt string `json:"createdAt"`
+	Id        string `json:"id"`
+	Email     string `json:"email"`
+	CreatedAt string `json:"createdAt"`
 }
 
 type V1UserSignUpRequest struct {
-  Email string `json:"email"`
-  Password string `json:"password"`
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
+
+type V1MeResponse struct {
+	Id        string `json:"id"`
+	Email     string `json:"email"`
+	CreatedAt string `json:"createdAt"`
 }
 
 type V1UsersResponse struct {
-  Users []V1UsersResponseUsers `json:"users"`
+	Users []V1UsersResponseUsers `json:"users"`
 }
 
 type V1UserLoginRequest struct {
-  Email string `json:"email"`
-  Password string `json:"password"`
+	Email    string `json:"email"`
+	Password string `json:"password"`
 }
 
 type V1UserAuthResponse struct {
-  Token string `json:"token"`
+	Token string `json:"token"`
 }
 
 type V1HealthStatusRequest struct {
-  Health int `json:"health"`
+	Health int `json:"health"`
 }
 
 type V1HealthStatusResponse struct {
-  Status string `json:"status"`
+	Status string `json:"status"`
 }
