# server/internal/handler/users.go
@@ -2,8 +2,11 @@ package handler
 
 import (
 	"context"
+	"fmt"
 	"go-pmp/api"
+	"go-pmp/internal/session"
 	"net/http"
+	"time"
 )
 
 func (h *Handler) GetUsers(w http.ResponseWriter, r *http.Request) {
@@ -29,4 +32,38 @@ func (h *Handler) GetUsers(w http.ResponseWriter, r *http.Request) {
 
 	w.Header().Set("Content-Type", "application/json")
 	h.JSON.Success(w, api.V1UsersResponse{Users: users})
+}
+
+func (h *Handler) GetMe(w http.ResponseWriter, r *http.Request) {
+
+	userID, ok := session.GetUserID(r.Context())
+	if !ok || userID == "" {
+		h.JSON.Error(w, http.StatusUnauthorized, "Unauthorized")
+		return
+	}
+
+	query := "SELECT id, email, created_at FROM auth.users WHERE id = $1"
+
+	ctx, cancel := context.WithTimeout(r.Context(), 3*time.Second)
+	defer cancel()
+
+	var id string
+	var email string
+	var createdAt string
+
+	err := h.DB.QueryRowContext(ctx, query, userID).Scan(&id, &email, &createdAt)
+	if err != nil {
+		fmt.Println("err", err)
+		h.JSON.Error(w, http.StatusInternalServerError, "Failed to query user")
+		return
+	}
+
+	fmt.Println("id", id)
+
+	h.JSON.Write(w, http.StatusOK, api.V1MeResponse{
+		Id:        id,
+		Email:     email,
+		CreatedAt: createdAt,
+	})
+
 }
